--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </body>
 <script type="text/javascript" src="src/js/game-of-life-worker-threads.js"></script>
 <script type="text/javascript">
+    // start game of life when all else is loaded
     var game = new GOLWT("container");
     game.run();
 </script>
